--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ playServicesAuth = "21.1.1"
 
 koin = "3.5.6"
 ksp = "2.0.10-1.0.24"
+activity = "1.8.0"
 
 
 [libraries]
@@ -46,6 +47,7 @@ googleid = { group = "com.google.android.libraries.identity.googleid", name = "g
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
