--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ playServicesAuth = "21.1.1"
 koin = "3.5.6"
 ksp = "2.0.10-1.0.24"
 activity = "1.8.0"
+firebaseFirestore = "25.1.4"
 
 
 [libraries]
@@ -48,6 +49,7 @@ play-services-auth = { module = "com.google.android.gms:play-services-auth", ver
 
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
